--- a/web-dentak/index.html
+++ b/web-dentak/index.html
@@ -1,8 +1,26 @@
 <!DOCTYPE html>
 <html lang="ja">
   <head>
-    <meta charset="utf-8">
-    <title>電卓アプリ</title>
+    <!DOCTYPE html>
+    <html>
+    <head>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
+      <meta property='og:type' content='website'>
+      <meta property='og:title' content='TSUBASA OMORI ポートフォリオ'>
+      <meta property='og:url' content='URLが入る'>
+      <meta property='og:description' content='TSUBASA OMORIのポートフォリオサイトです！'>
+      <meta property="og:image" content="img/ogp.png">
+      <meta name="description" content="SUBASA OMORIのポートフォリオサイトです！" />
+      <title>TSUBASA OMORI ポートフォリオ</title>
+      <link href="https://fonts.googleapis.com/css?family=Open+Sans:700" rel="stylesheet">
+      <link href="css/reset.css" media="all" rel="stylesheet" type="text/css" />
+      <link href="css/photoswipe/photoswipe.css" media="all" rel="stylesheet" type="text/css" />
+      <link href="css/photoswipe/default-skin/default-skin.css" media="all" rel="stylesheet" type="text/css" />
+      <link href="css/style.css" media="all" rel="stylesheet" type="text/css" />
+      <link rel="shortcut icon" href="img/favicon.ico" />
+      <link rel=”canonical” href=”URLが入る” />
+      <title>電卓アプリ</title>
   </head>
   <body>
     <div>
