--- a/web-dentak/index.html
+++ b/web-dentak/index.html
@@ -32,6 +32,6 @@
     <button type="button" id="button-mul">*</button>
     <button type="button" id="button-div">/</button>
     <div id="box"></div>
-    <script src="main.js"></script>
+    <script src="/web-dentak/main.js"></script>
   </body>
 </html>
