--- a/web-dentak/index.html
+++ b/web-dentak/index.html
@@ -32,6 +32,12 @@
     <button type="button" id="button-mul">*</button>
     <button type="button" id="button-div">/</button>
     <div id="box"></div>
-    <script src="/web-dentak/main.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script type='text/javascript' src="js/photoswipe/photoswipe.min.js"></script>
+    <script type='text/javascript' src="js/photoswipe/photoswipe-ui-default.js"></script>
+    <script type='text/javascript' src="js/photoswipe/photoswipe-setup.js"></script>
+    <script type='text/javascript' src="js/lazysizes/lazysizes.min.js"></script>
+    <script type='text/javascript' src="/web-dentak/main.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@master/devicon.min.css">  
   </body>
 </html>
