--- a/index.html
+++ b/index.html
@@ -125,13 +125,28 @@
                   <span class="text-bold">サイト名：</span><br>読書アウトプットアプリ<br><a href="https://bookoutput283.herokuapp.com/" target="_blank">https://bookoutput283.herokuapp.com/</a></p>
                 <p><span class="text-bold">使用スキル：</span><br>HTML5 / CSS3 /Bootstrap<br>PHP / Laravel / MySQL / S3(AWS)
                 <p><span
-                    class="text-bold">コンセプト：</span><br>人生を変えることを前提とした、読書アウトプットアプリ。<br><br>
+                    class="text-bold">コンセプト：</span><br>人生を変えることを前提とした、自己啓発・ビジネス書専用のアウトプットアプリ。<br><br>
                 </p>
                 <p>プログラミングスクールにて、人生初のオリジナルアプリを製作しました。
-                  <br>社会人になり、自分を大きく変化させてくれる、読書の虜になりました。
-                  <br>そして、自分の行動を変化させて初めて、読書に意味があることに気付きました。
-                  <br>そこで、投稿するだけで、なりたい自分になるアプリを作りたいと思い、読書アウトプットアプリを製作しました。
-                  <br>アプリの手順としては、1冊の読書から、自分の変化させたい行動を考え、その行動を変化させる方法を本から見つけ出し、記録として残せるようにしました。
+                  <br>私は、社会人になり、自分を大きく変化させてくれた、『読書』の虜になりました。
+                  <br>
+                  <br>自己啓発・ビジネス書読書をしている人の中でこんな悩みを持っている人はいませんか？
+                  <br>
+                  <br> ・「読んだけど、なにも変わっていない。。。」
+                  <br> ・「読んだけど、なかなか行動に移せない。。。」
+                  <br> ・「そもそも、アウトプットが苦手。。。」
+                  <br>
+                  <br>過去の私もそうでした。。。
+                  <br>そこで、そんな悩みを解消するアプリを製作しました。
+
+                  <br>多くの情報の中から、選んで読書した後でこのアプリを利用し記録します。
+                  <br>アプリの使用手順は、以下の①〜③の流れになっています。
+                  <br>　①まず、本の情報を記録する。
+                  <br>　　例：早起き大全！！
+                  <br>　②次に、自分の変えたい行動を考え、記録する。
+                  <br>　　例：毎日早起きできるようになりたい！
+                  <br>　③最後に、本からその変えたい行動に対する答えを考え、記録する。
+                  <br>　　例：毎日早く寝る。
                 </p>
                 <p>1人でも、多くの人の人生を変えるようなアプリになりますように。。。
                 </p>
