--- a/index.html
+++ b/index.html
@@ -134,19 +134,21 @@
                   <br>
                   <br> ・「読んだけど、なにも変わっていない。。。」
                   <br> ・「読んだけど、なかなか行動に移せない。。。」
-                  <br> ・「そもそも、アウトプットが苦手。。。」
+                  <br> ・「そもそも、アウトプット（記録）が苦手。。。」
                   <br>
                   <br>過去の私もそうでした。。。
                   <br>そこで、そんな悩みを解消するアプリを製作しました。
-
-                  <br>多くの情報の中から、選んで読書した後でこのアプリを利用し記録します。
-                  <br>アプリの使用手順は、以下の①〜③の流れになっています。
-                  <br>　①まず、本の情報を記録する。
+                  <br>多くの情報の中から、選んで読書した後、このアプリに記録します。
+                  <br>
+                  <br>アプリの使用手順は、以下の①〜④の流れになっています。
+                  <br>　①まず、選んだ本の情報を記録する。
                   <br>　　例：早起き大全！！
                   <br>　②次に、自分の変えたい行動を考え、記録する。
                   <br>　　例：毎日早起きできるようになりたい！
-                  <br>　③最後に、本からその変えたい行動に対する答えを考え、記録する。
+                  <br>　③そして、その変えたい行動に対する答えを考え、記録する。
                   <br>　　例：毎日早く寝る。
+                  <br>　④最後に、行動した結果を記録する。
+                  <br>　　例：毎日早起きできるようになった！
                 </p>
                 <p>1人でも、多くの人の人生を変えるようなアプリになりますように。。。
                 </p>
