--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                   <br>　④最後に、行動した結果を記録する。
                   <br>　　例：毎日早起きできるようになった！
                 </p>
-                <p>1人でも、多くの人の人生を変えるようなアプリになりますように。。。
+                <p>はい！。。。これであなたの人生は変わりました！
                 </p>
               </div>
             </div>
