--- a/index.html
+++ b/index.html
@@ -122,35 +122,13 @@
               </div>
               <div class="feature-body">
                 <p>
-                  <span class="text-bold">サイト名：</span><br>読書アウトプットアプリ<br><a href="https://bookoutput283.herokuapp.com/" target="_blank">https://bookoutput283.herokuapp.com/</a></p>
+                  <span class="text-bold">サイト名：</span><br>読書記録アプリ<br><a href="https://bookoutput283.herokuapp.com/" target="_blank">https://bookoutput283.herokuapp.com/</a></p>
                 <p><span class="text-bold">使用スキル：</span><br>HTML5 / CSS3 /Bootstrap<br>PHP / Laravel / MySQL / S3(AWS)
                 <p><span
-                    class="text-bold">コンセプト：</span><br>人生を変えることを前提とした、自己啓発・ビジネス書専用のアウトプットアプリ。<br><br>
+                    class="text-bold"></span>コンセプト：<br>読書後、感動した言葉を記録し、今後の目標を立てるアプリ。
                 </p>
-                <p>プログラミングスクールにて、人生初のオリジナルアプリを製作しました。
-                  <br>私は、社会人になり、自分を大きく変化させてくれた、『読書』の虜になりました。
-                  <br>
-                  <br>自己啓発・ビジネス書読書をしている人の中でこんな悩みを持っている人はいませんか？
-                  <br>
-                  <br> ・「読んだけど、なにも変わっていない。。。」
-                  <br> ・「読んだけど、なかなか行動に移せない。。。」
-                  <br> ・「そもそも、アウトプット（記録）が苦手。。。」
-                  <br>
-                  <br>過去の私もそうでした。。。
-                  <br>そこで、そんな悩みを解消するアプリを製作しました。
-                  <br>多くの情報の中から、選んで読書した後、このアプリに記録します。
-                  <br>
-                  <br>アプリの使用手順は、以下の①〜④の流れになっています。
-                  <br>　①まず、選んだ本の情報を記録する。
-                  <br>　　例：早起き大全！！
-                  <br>　②次に、自分の変えたい行動を考え、記録する。
-                  <br>　　例：毎日早起きできるようになりたい！
-                  <br>　③そして、その変えたい行動に対する答えを考え、記録する。
-                  <br>　　例：毎日早く寝る。
-                  <br>　④最後に、行動した結果を記録する。
-                  <br>　　例：毎日早起きできるようになった！
                 </p>
-                <p>はい！。。。これであなたの人生は変わりました！
+                <p>一人でも多くの人が、形に残る読書ができますように。。。
                 </p>
               </div>
             </div>
