--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <figcaption class="works-body">
                   <div class="works-title">Web電卓</div>
                   <div class="works-text">HTML5 / JavaScript </div>
-                  <div class="works-url"><a class="works-url-link" href="/web-dentak/index.html" target="_blank">Link</a>
+                  <div class="works-url"><a class="works-url-link" href="tsubapoto-git/web-dentak/index.html" target="_blank">Link</a>
                   </div>
                 </figcaption>
               </figure>
@@ -122,7 +122,7 @@
               </div>
               <div class="feature-body">
                 <p>
-                  <span class="text-bold">サイト名：</span><br>読書記録アプリ<br><a href="https://bookoutput283.herokuapp.com/" target="_blank">https://bookoutput283.herokuapp.com/</a></p>
+                  <span class="text-bold">サイト名：</span><br>読書記録アプリ<br><a href="https://bookoutput283.herokuapp.com/" target="_blank">Link</a></p>
                 <p><span class="text-bold">使用スキル：</span><br>HTML5 / CSS3 /Bootstrap<br>PHP / Laravel / MySQL / S3(AWS)
                 <p><span
                     class="text-bold"></span>コンセプト：<br>読書後、感動した言葉を記録し、今後の目標を立てるアプリ。
@@ -214,7 +214,7 @@
                   <br>
                   <br>【スキル】
                   <br>言語：JavaScript、HTML5、CSS3
-                  <br>開発環境：Cloud9、Firebase
+                  <br>開発環境：Cloud9、Firebase、Vue.js
                   <br>DB：Firebase
                   <br>フレームワーク：jQuery、Bootstrap
                   <br>その他：Web API(Flicker API) + Ajax
