--- a/web-dentak/index.html
+++ b/web-dentak/index.html
@@ -37,7 +37,7 @@
     <script type='text/javascript' src="js/photoswipe/photoswipe-ui-default.js"></script>
     <script type='text/javascript' src="js/photoswipe/photoswipe-setup.js"></script>
     <script type='text/javascript' src="js/lazysizes/lazysizes.min.js"></script>
-    <script type='text/javascript' src="/main.js"></script>
+    <script type='text/javascript' src="main.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@master/devicon.min.css">  
   </body>
 </html>
