--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <figcaption class="works-body">
                   <div class="works-title">Web電卓</div>
                   <div class="works-text">HTML5 / JavaScript </div>
-                  <div class="works-url"><a class="works-url-link" href="tsubapoto-git/web-dentak/index.html" target="_blank">Link</a>
+                  <div class="works-url"><a class="works-url-link" href="web-dentak/index.html" target="_blank">Link</a>
                   </div>
                 </figcaption>
               </figure>
