--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <figcaption class="works-body">
                   <div class="works-title">タスク管理アプリ
                   </div>
-                  <div class="works-text">HTML5 / Bootstrap<br>PHP / Laravel / MySQL</div>
+                  <div class="works-text">HTML5 / Bootstrap /<br>PHP / Laravel / MySQL</div>
                   <div class="works-url"><a class="works-url-link" href="https://tasklist-tsubasan1.herokuapp.com/" target="_blank">Link</a>
                   </div>
                 </figcaption>
@@ -79,7 +79,7 @@
                 </a>
                 <figcaption class="works-body">
                   <div class="works-title">Twitterクローン</div>
-                  <div class="works-text">HTML5 / Bootstrap<br>PHP / Laravel / MySQL </div>
+                  <div class="works-text">HTML5 / Bootstrap /<br>PHP / Laravel / MySQL </div>
                   <div class="works-url"><a class="works-url-link" href="https://twitter-mitai.herokuapp.com/" target="_blank">Link</a>
                   </div>
                 </figcaption>
@@ -97,6 +97,21 @@
                   </div>
                 </figcaption>
               </figure>
+
+              <figure class="works-item">
+                <a href="img/works/bookshelf.jpeg" data-size="800x800" class="works-image-wrapper works-link hover-action">
+                  <img class="works-image lazyload fadein" src="img/works/bookshelf.jpeg" data-src="img/works/bookshelf.jpeg"
+                    alt="" />
+                </a>
+                <figcaption class="works-body">
+                  <div class="works-title">みんなのオンライン本棚</div>
+                  <div class="works-text">HTML5/ CSS3 / jQuery /<br> Bootstrap / firebase </div>
+                  <div class="works-url"><a class="works-url-link" href="bookshelf/index.html" target="_blank">Link</a>
+                  </div>
+                </figcaption>
+              </figure>
+
+
             </div>
           </div>
         </div>
