--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
               </figure>
 
               <figure class="works-item">
-                <a href="img/works/bookshelf.jpeg" data-size="800x800" class="works-image-wrapper works-link hover-action">
-                  <img class="works-image lazyload fadein" src="img/works/bookshelf.jpeg" data-src="img/works/bookshelf.jpeg"
+                <a href="img/works/bookshelf.PNG" data-size="800x800" class="works-image-wrapper works-link hover-action">
+                  <img class="works-image lazyload fadein" src="img/works/bookshelf.PNG" data-src="img/works/bookshelf.PNG"
                     alt="" />
                 </a>
                 <figcaption class="works-body">
