--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <link href="css/style.css" media="all" rel="stylesheet" type="text/css" />
   <link rel="shortcut icon" href="img/favicon.ico" />
   <link rel=”canonical” href=”URLが入る” />
-  <link rel="stylesheet" href="animate.css">
+  <link rel="stylesheet" href="css/animate.css">
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@500&display=swap');
     </style>
