--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <html lang="ja">
+  <lang="ja">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
   <meta property='og:type' content='website'>
@@ -145,7 +145,7 @@
                 <div class="feature-body">
                   <p>
                     <span class="text-bold">サイト名：</span><br>読書記録アプリ<br><a href="https://bookoutput283.herokuapp.com/" target="_blank">Link</a></p>
-                  <p><span class="text-bold">使用スキル：</span><br>HTML5 / CSS3 /Bootstrap<br>PHP / Laravel / MySQL / S3(AWS)
+                  <p><span class="text-bold">使用スキル：</span><br>HTML5 / CSS3 / jQuery / Bootstrap<br>PHP / Laravel / MySQL / S3(AWS)
                   <p><span
                       class="text-bold"></span>コンセプト：<br>読書後、感動した言葉を記録し、今後の目標を立てるアプリ。
                   </p>
@@ -212,12 +212,13 @@
                     <br>開発環境：Cloud9、Linux、Heroku、Git/GitHub
                     <br>DB：MySQL
                     <br>フレームワーク：Laravel、Bootstrap 
+                    <br>ストレージ：S3(AWS) 
                     <br>
                     <br>
                     <br>【学習内容】
-                    <br>・HTML/CSSの基本・ターミナルの基本・PHPの基礎
+                    <br>・HTML/CSSの基本・PHPの基礎
                     <br>　- 文法の基礎
-                    <br>　- Webサーバを起動してPHPを自動実行
+                    <br>　- ターミナルを使用してPHPを自動実行
                     <br>　- フォームデータの送受信
                     <br>　- オブジェクト
                     <br>　- 複数ファイルの連携
@@ -227,7 +228,6 @@
                     <br>　- テーブルの作成/操作/分析/結合
                     <br>・PHP+MySQL
                     <br>　- PHPとMySQLの連携
-                    <br>　- BookListの作成
                     <br>・Git/GitHubの基本
                     <br>・Bootstrapの使用
                     <br>・Laravelでの開発
@@ -241,6 +241,7 @@
                     <br>DB：Firebase
                     <br>フレームワーク：jQuery、Bootstrap
                     <br>その他：Web API(Flicker API) + Ajax
+                    <br>
                     <br>
                     <br>【学習内容】
                     <br>・Webサイト制作の流れ
