--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
               </figure>
 
               <figure class="works-item">
-                <a href="img/works/chat.jpg" data-size="800x800" class="works-image-wrapper works-link hover-action">
-                  <img class="works-image lazyload fadein" src="img/placeholder4x3.png" data-src="img/works/chat.jpg" alt="" />
+                <a href="img/works/chat.PNG" data-size="800x800" class="works-image-wrapper works-link hover-action">
+                  <img class="works-image lazyload fadein" src="img/placeholder4x3.png" data-src="img/works/chat.PNG" alt="" />
                 </a>
                 <figcaption class="works-body">
                   <div class="works-title">リアルチャット</div>
